--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,9 +12,10 @@ spring:
       hibernate:
         format_sql: true
         use_sql_comments: true
-#  redis:
-#    host: localhost
-#    port: 6379
+  data:
+    redis:
+      host: localhost
+      port: 6379
 
 api-spec:
   kakao:
